k8s/demo-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    name: demo
spec:
  containers:
    - name: demo
      image: demo
      ports:
        - containerPort: 8086
