k8s/demo-loadbalancer.yml
kind: Service
apiVersion: v1
metadata:
  name: demo
spec:
  type: LoadBalancer
  ports:
    - port: 8086
  selector:
    name: demo
