k8s/demo-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
    - host: demo.kube.com
      http:
        paths:
          - backend:
              serviceName: demo
              servicePort: 8086
